--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: about.html
     - text: "Resume"
       href: resume.html
+    - text: "Dashboard"
+      href: dashboards.html
     - icon: fa-envelope fa-lg
       href: mailto:ajt2206@cumc.columbia.edu
     - icon: fa-github fa-lg
